Add image publication to ci process

--- a/ci/cloudbuild.yaml
+++ b/ci/cloudbuild.yaml
@@ -16,3 +16,6 @@ steps:
          'gcr.io/${PROJECT_ID}/smoother:latest',
          'smoother','1000','1000','100'
   ]
+
+
+images: ['gcr.io/${PROJECT_ID}/smoother:latest']
